; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-adsl-mei/src/extr_drv_mei_cpe.c__IFX_MEI_DBGLongWordWrite.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-adsl-mei/src/extr_drv_mei_cpe.c__IFX_MEI_DBGLongWordWrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ME_DBG_DECODE = common dso_local global i64 0, align 8
@ME_DBG_WR_AD = common dso_local global i64 0, align 8
@ME_DBG_DATA = common dso_local global i64 0, align 8
@DSL_DEV_MEI_ERR_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32, i32)* @_IFX_MEI_DBGLongWordWrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_IFX_MEI_DBGLongWordWrite(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = load i64, i64* @ME_DBG_DECODE, align 8
  %11 = trunc i64 %10 to i32
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @IFX_MEI_LongWordWriteOffset(i32* %9, i32 %11, i32 %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load i64, i64* @ME_DBG_WR_AD, align 8
  %16 = trunc i64 %15 to i32
  %17 = load i32, i32* %7, align 4
  %18 = call i32 @IFX_MEI_LongWordWriteOffset(i32* %14, i32 %16, i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load i64, i64* @ME_DBG_DATA, align 8
  %21 = trunc i64 %20 to i32
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @IFX_MEI_LongWordWriteOffset(i32* %19, i32 %21, i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @meiPollForDbgDone(i32* %24)
  %26 = load i32, i32* @DSL_DEV_MEI_ERR_SUCCESS, align 4
  ret i32 %26
}

declare dso_local i32 @IFX_MEI_LongWordWriteOffset(i32*, i32, i32) #1

declare dso_local i32 @meiPollForDbgDone(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
